--- a/src/css/style.css
+++ b/src/css/style.css
@@ -332,6 +332,370 @@ p {
   margin: 0.7em 0;
   line-height: 1.3; }
 
+* {
+  box-sizing: border-box; }
+
+.container {
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  border: 2px solid orange; }
+
+.container-fluid {
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px; }
+
+.row {
+  display: flex;
+  flex-wrap: wrap; }
+
+@media (max-width: 767px) {
+  .col-sm-1 {
+    flex: 0 0 8.33333%;
+    max-width: 8.33333%; }
+  .col-offset-sm-1 {
+    flex: 0 0 8.33333%;
+    max-width: 8.33333%;
+    margin-left: 8.33333%; }
+  .col-sm-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%; }
+  .col-offset-sm-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%;
+    margin-left: 16.66667%; }
+  .col-sm-3 {
+    flex: 0 0 25%;
+    max-width: 25%; }
+  .col-offset-sm-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+    margin-left: 25%; }
+  .col-sm-4 {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%; }
+  .col-offset-sm-4 {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+    margin-left: 33.33333%; }
+  .col-sm-5 {
+    flex: 0 0 41.66667%;
+    max-width: 41.66667%; }
+  .col-offset-sm-5 {
+    flex: 0 0 41.66667%;
+    max-width: 41.66667%;
+    margin-left: 41.66667%; }
+  .col-sm-6 {
+    flex: 0 0 50%;
+    max-width: 50%; }
+  .col-offset-sm-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+    margin-left: 50%; }
+  .col-sm-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%; }
+  .col-offset-sm-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%;
+    margin-left: 58.33333%; }
+  .col-sm-8 {
+    flex: 0 0 66.66667%;
+    max-width: 66.66667%; }
+  .col-offset-sm-8 {
+    flex: 0 0 66.66667%;
+    max-width: 66.66667%;
+    margin-left: 66.66667%; }
+  .col-sm-9 {
+    flex: 0 0 75%;
+    max-width: 75%; }
+  .col-offset-sm-9 {
+    flex: 0 0 75%;
+    max-width: 75%;
+    margin-left: 75%; }
+  .col-sm-10 {
+    flex: 0 0 83.33333%;
+    max-width: 83.33333%; }
+  .col-offset-sm-10 {
+    flex: 0 0 83.33333%;
+    max-width: 83.33333%;
+    margin-left: 83.33333%; }
+  .col-sm-11 {
+    flex: 0 0 91.66667%;
+    max-width: 91.66667%; }
+  .col-offset-sm-11 {
+    flex: 0 0 91.66667%;
+    max-width: 91.66667%;
+    margin-left: 91.66667%; }
+  .col-sm-12 {
+    flex: 0 0 100%;
+    max-width: 100%; }
+  .col-offset-sm-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-left: 100%; } }
+
+@media (min-width: 768px) {
+  .col-md-1 {
+    flex: 0 0 8.33333%;
+    max-width: 8.33333%; }
+  .col-offset-md-1 {
+    flex: 0 0 8.33333%;
+    max-width: 8.33333%;
+    margin-left: 8.33333%; }
+  .col-md-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%; }
+  .col-offset-md-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%;
+    margin-left: 16.66667%; }
+  .col-md-3 {
+    flex: 0 0 25%;
+    max-width: 25%; }
+  .col-offset-md-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+    margin-left: 25%; }
+  .col-md-4 {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%; }
+  .col-offset-md-4 {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+    margin-left: 33.33333%; }
+  .col-md-5 {
+    flex: 0 0 41.66667%;
+    max-width: 41.66667%; }
+  .col-offset-md-5 {
+    flex: 0 0 41.66667%;
+    max-width: 41.66667%;
+    margin-left: 41.66667%; }
+  .col-md-6 {
+    flex: 0 0 50%;
+    max-width: 50%; }
+  .col-offset-md-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+    margin-left: 50%; }
+  .col-md-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%; }
+  .col-offset-md-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%;
+    margin-left: 58.33333%; }
+  .col-md-8 {
+    flex: 0 0 66.66667%;
+    max-width: 66.66667%; }
+  .col-offset-md-8 {
+    flex: 0 0 66.66667%;
+    max-width: 66.66667%;
+    margin-left: 66.66667%; }
+  .col-md-9 {
+    flex: 0 0 75%;
+    max-width: 75%; }
+  .col-offset-md-9 {
+    flex: 0 0 75%;
+    max-width: 75%;
+    margin-left: 75%; }
+  .col-md-10 {
+    flex: 0 0 83.33333%;
+    max-width: 83.33333%; }
+  .col-offset-md-10 {
+    flex: 0 0 83.33333%;
+    max-width: 83.33333%;
+    margin-left: 83.33333%; }
+  .col-md-11 {
+    flex: 0 0 91.66667%;
+    max-width: 91.66667%; }
+  .col-offset-md-11 {
+    flex: 0 0 91.66667%;
+    max-width: 91.66667%;
+    margin-left: 91.66667%; }
+  .col-md-12 {
+    flex: 0 0 100%;
+    max-width: 100%; }
+  .col-offset-md-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-left: 100%; } }
+
+@media (min-width: 992px) {
+  .col-lg-1 {
+    flex: 0 0 8.33333%;
+    max-width: 8.33333%; }
+  .col-offset-lg-1 {
+    flex: 0 0 8.33333%;
+    max-width: 8.33333%;
+    margin-left: 8.33333%; }
+  .col-lg-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%; }
+  .col-offset-lg-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%;
+    margin-left: 16.66667%; }
+  .col-lg-3 {
+    flex: 0 0 25%;
+    max-width: 25%; }
+  .col-offset-lg-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+    margin-left: 25%; }
+  .col-lg-4 {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%; }
+  .col-offset-lg-4 {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+    margin-left: 33.33333%; }
+  .col-lg-5 {
+    flex: 0 0 41.66667%;
+    max-width: 41.66667%; }
+  .col-offset-lg-5 {
+    flex: 0 0 41.66667%;
+    max-width: 41.66667%;
+    margin-left: 41.66667%; }
+  .col-lg-6 {
+    flex: 0 0 50%;
+    max-width: 50%; }
+  .col-offset-lg-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+    margin-left: 50%; }
+  .col-lg-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%; }
+  .col-offset-lg-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%;
+    margin-left: 58.33333%; }
+  .col-lg-8 {
+    flex: 0 0 66.66667%;
+    max-width: 66.66667%; }
+  .col-offset-lg-8 {
+    flex: 0 0 66.66667%;
+    max-width: 66.66667%;
+    margin-left: 66.66667%; }
+  .col-lg-9 {
+    flex: 0 0 75%;
+    max-width: 75%; }
+  .col-offset-lg-9 {
+    flex: 0 0 75%;
+    max-width: 75%;
+    margin-left: 75%; }
+  .col-lg-10 {
+    flex: 0 0 83.33333%;
+    max-width: 83.33333%; }
+  .col-offset-lg-10 {
+    flex: 0 0 83.33333%;
+    max-width: 83.33333%;
+    margin-left: 83.33333%; }
+  .col-lg-11 {
+    flex: 0 0 91.66667%;
+    max-width: 91.66667%; }
+  .col-offset-lg-11 {
+    flex: 0 0 91.66667%;
+    max-width: 91.66667%;
+    margin-left: 91.66667%; }
+  .col-lg-12 {
+    flex: 0 0 100%;
+    max-width: 100%; }
+  .col-offset-lg-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-left: 100%; } }
+
+@media (min-width: 1200px) {
+  .col-xl-1 {
+    flex: 0 0 8.33333%;
+    max-width: 8.33333%; }
+  .col-offset-xl-1 {
+    flex: 0 0 8.33333%;
+    max-width: 8.33333%;
+    margin-left: 8.33333%; }
+  .col-xl-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%; }
+  .col-offset-xl-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%;
+    margin-left: 16.66667%; }
+  .col-xl-3 {
+    flex: 0 0 25%;
+    max-width: 25%; }
+  .col-offset-xl-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+    margin-left: 25%; }
+  .col-xl-4 {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%; }
+  .col-offset-xl-4 {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+    margin-left: 33.33333%; }
+  .col-xl-5 {
+    flex: 0 0 41.66667%;
+    max-width: 41.66667%; }
+  .col-offset-xl-5 {
+    flex: 0 0 41.66667%;
+    max-width: 41.66667%;
+    margin-left: 41.66667%; }
+  .col-xl-6 {
+    flex: 0 0 50%;
+    max-width: 50%; }
+  .col-offset-xl-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+    margin-left: 50%; }
+  .col-xl-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%; }
+  .col-offset-xl-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%;
+    margin-left: 58.33333%; }
+  .col-xl-8 {
+    flex: 0 0 66.66667%;
+    max-width: 66.66667%; }
+  .col-offset-xl-8 {
+    flex: 0 0 66.66667%;
+    max-width: 66.66667%;
+    margin-left: 66.66667%; }
+  .col-xl-9 {
+    flex: 0 0 75%;
+    max-width: 75%; }
+  .col-offset-xl-9 {
+    flex: 0 0 75%;
+    max-width: 75%;
+    margin-left: 75%; }
+  .col-xl-10 {
+    flex: 0 0 83.33333%;
+    max-width: 83.33333%; }
+  .col-offset-xl-10 {
+    flex: 0 0 83.33333%;
+    max-width: 83.33333%;
+    margin-left: 83.33333%; }
+  .col-xl-11 {
+    flex: 0 0 91.66667%;
+    max-width: 91.66667%; }
+  .col-offset-xl-11 {
+    flex: 0 0 91.66667%;
+    max-width: 91.66667%;
+    margin-left: 91.66667%; }
+  .col-xl-12 {
+    flex: 0 0 100%;
+    max-width: 100%; }
+  .col-offset-xl-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-left: 100%; } }
+
 .btn {
   display: inline-block;
   height: 41.4px;
@@ -367,13 +731,21 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase; }
 
 .meters-container {
-  width: 700px;
+  max-width: 700px;
   height: 108px;
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
   justify-content: space-between;
   align-items: center; }
+
+.meters-container-new {
+  max-width: 400px;
+  height: 54px;
+  display: flex;
+  flex-wrap: nowrap;
+  margin: 0 auto;
+  justify-content: center; }
 
 .meter-wrapper {
   width: 300px;
@@ -390,5 +762,140 @@ h1, h2, h3, h4, h5, h6 {
     color: #808080; }
   .meter-wrapper .meter-value {
     color: #000; }
+
+.time-picker-container {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.time-picker-wrapper {
+  border: 1px solid #e3e3e3;
+  border-radius: 5px;
+  height: 44px;
+  padding: 6px 12px;
+  margin-right: 18px;
+  display: flex;
+  align-items: center;
+  /* & input:first-child:after {
+      content: '';
+      margin: 0 6px;
+      width: 1px;
+      height: 32px;
+      background-color: $grey-2;
+    }*/ }
+
+/* Generated by Glyphter (http://www.glyphter.com) on  Tue Aug 01 2017*/
+@font-face {
+  font-family: 'Glyphter';
+  src: url("../sass/components/icon-fonts/Glyphter.eot");
+  src: url("../sass/components/icon-fonts/Glyphter.eot?#iefix") format("embedded-opentype"), url("../sass/components/icon-fonts/Glyphter.woff") format("woff"), url("../sass/components/icon-fonts/Glyphter.ttf") format("truetype"), url("../sass/components/icon-fonts/Glyphter.svg#Glyphter") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+[class*='icon-']:before {
+  display: inline-block;
+  font-family: 'Glyphter';
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+.icon-arrow-down:before {
+  content: '\0041'; }
+
+.icon-arrow-down-small:before {
+  content: '\0042'; }
+
+.icon-arrow-left:before {
+  content: '\0043'; }
+
+.icon-arrow-right:before {
+  content: '\0044'; }
+
+.icon-arrow-up:before {
+  content: '\0045'; }
+
+.icon-arrow-up-small:before {
+  content: '\0046'; }
+
+.icon-banners:before {
+  content: '\0047'; }
+
+.icon-calendar:before {
+  content: '\0048'; }
+
+.icon-close:before {
+  content: '\0049'; }
+
+.icon-details:before {
+  content: '\004a'; }
+
+.icon-general:before {
+  content: '\004b'; }
+
+.icon-links:before {
+  content: '\004c'; }
+
+.icon-login:before {
+  content: '\004d'; }
+
+.icon-message:before {
+  content: '\004e'; }
+
+.icon-negative:before {
+  content: '\004f'; }
+
+.icon-notification:before {
+  content: '\0050'; }
+
+.icon-password:before {
+  content: '\0051'; }
+
+.icon-payout:before {
+  content: '\0052'; }
+
+.icon-personaldata:before {
+  content: '\0053'; }
+
+.icon-positive:before {
+  content: '\0054'; }
+
+.icon-postback:before {
+  content: '\0055'; }
+
+.icon-profile:before {
+  content: '\0056'; }
+
+.icon-quit:before {
+  content: '\0057'; }
+
+.icon-refresh:before {
+  content: '\0058'; }
+
+.icon-show:before {
+  content: '\0059'; }
+
+.icon-trash:before {
+  content: '\005a'; }
+
+.icon-url:before {
+  content: '\0061'; }
+
+.icon-wallet:before {
+  content: '\0062'; }
+
+.scroll-wrapper {
+  display: block;
+  width: 100%;
+  overflow-x: auto; }
+
+.scroll-wrapper img {
+  width: auto; }
+
+.chart {
+  max-width: 670px;
+  margin: 0 auto;
+  border: 2px solid red; }
 
 /*# sourceMappingURL=style.css.map */
