--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -29,7 +29,10 @@ a {
     &.large {
       font-size: $font-size-lg;
     }
-  
+    &.medium {
+      font-size: $font-size-md;
+    }
+    
     &.small {
       font-size: $font-size-sm;
     }
