--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -27,4 +27,8 @@
         background-color: $orange-light;
       }
     }
+    &.add {
+      margin-top: 5px;
+      margin-bottom: 10px;
+    }
 }
