--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,6 +14,7 @@
 @import "components/time-picker";
 @import "components/icons";
 @import "components/graph";
+@import "components/table";
 
 // .icon-arrow-down {
 //    background: url("components/icon-fonts/arrow-down.svg");
