--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 /* Fonts */
 /* Colors */
-/* margins */
+/* margins and padding */
 /* Buttons */
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -325,6 +325,8 @@ a {
     color: #f1b141; }
   a.large {
     font-size: 18px; }
+  a.medium {
+    font-size: 14px; }
   a.small {
     font-size: 13px; }
 
@@ -332,21 +334,49 @@ p {
   margin: 0.7em 0;
   line-height: 1.3; }
 
-* {
-  box-sizing: border-box; }
-
 .container {
   width: 100%;
   max-width: 1170px;
   margin: 0 auto;
   padding-left: 15px;
-  padding-right: 15px;
-  border: 2px solid orange; }
+  padding-right: 15px; }
 
 .container-fluid {
   width: 100%;
   padding-left: 15px;
   padding-right: 15px; }
+
+* {
+  box-sizing: border-box; }
+
+.board-container {
+  max-width: 100%;
+  background-color: #fff;
+  box-shadow: 3px -3px 8px #e3e3e3;
+  margin: 20px; }
+
+.board-info-header {
+  width: 100%;
+  padding: 15px 0 15px 10px;
+  margin: 18px 0;
+  border-bottom: 1px solid #a6a6a6; }
+
+.board-content {
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 0 20px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.container-800 {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 .row {
   display: flex;
@@ -704,7 +734,7 @@ p {
   line-height: 41.4px;
   color: #fff;
   text-align: center;
-  padding: 0 12px;
+  padding: 0 20px;
   border-radius: 5px;
   background-color: #808080;
   border: 1px solid transparent;
@@ -717,17 +747,20 @@ p {
     background-color: #c46009; }
     .btn.orange:hover, .btn.orange:active {
       background-color: #f1b141; }
+  .btn.add {
+    margin-top: 5px;
+    margin-bottom: 10px; }
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0.7em 0; }
 
-.section-info-header, .chart-header {
+.board-info-header, .chart-header {
   font-size: 18px;
   font-weight: 700;
   margin: 18px 0;
   color: #808080; }
 
-.section-info-header {
+.board-info-header {
   text-transform: uppercase; }
 
 .meters-container {
@@ -895,7 +928,46 @@ h1, h2, h3, h4, h5, h6 {
 
 .chart {
   max-width: 670px;
-  margin: 0 auto;
-  border: 2px solid red; }
+  margin: 0 auto; }
+
+.links-table {
+  width: 100%;
+  table-layout: fixed;
+  border-collapse: collapse;
+  border-spacing: 0;
+  font-size: 18px;
+  margin-bottom: 24px;
+  margin-top: 24px; }
+
+table {
+  max-width: 670px; }
+  table tr {
+    transition: background-color 0.3s ease; }
+  table td {
+    padding-left: 1.5em;
+    border-top: 1px solid #a6a6a6; }
+  table tr:nth-last-child(1) {
+    border-bottom: 1px solid #a6a6a6; }
+  table tr:hover .table-action-link {
+    visibility: visible; }
+  table tr:hover {
+    background-color: #e3e3e3; }
+
+td {
+  padding: 15px; }
+
+.link-header {
+  font-size: 18px;
+  font-weight: 700;
+  color: #a6a6a6; }
+
+.td-action-link {
+  text-align: right; }
+
+.table-action-link {
+  margin: 0.5em;
+  visibility: hidden; }
+  .table-action-link:nth-last-child(1) {
+    color: red; }
 
 /*# sourceMappingURL=style.css.map */
