--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -31,6 +31,8 @@ $table-links-margins: 24px;
 $table-links-tr-padding: 15px;
 $board-info-header-padding: 15px 0 15px 10px;
 $board-info-header-margin: 18px 0;
+$board-content-padding: 0 0 20px 0;
+$board-content-time-picker-padding:0 0 20px 0 ;
 
 /* Buttons */
 $btn-height: 2.3 * $font-size-lg;
