--- a/src/sass/components/_graph.scss
+++ b/src/sass/components/_graph.scss
@@ -9,7 +9,10 @@
 }
 
 .chart {
-    max-width: 670px;
+    max-width: 655px;
     margin: 0 auto;
 }
-
+.chart img {
+    object-fit: cover;
+    width: 100%;
+}
